--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="preload" as="image" href="/recipe-1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CafeDine App</title>
   </head>
