--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="preload" as="image" href="/recipe-1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="CafeDine App - Order your favorite dishes and share amazing recipes with friends. Made by @atifrazax." />
+    <meta name="keywords" content="recipes, food, cooking, cafe, meal planning, quick recipes" />
+    <meta name="author" content="Atif Raza - @atifrazax" />
+    <meta name="theme-color" content="#e7272d" />
     <title>CafeDine App</title>
   </head>
   <body>
